<resources>
    <string name="app_name">SuperCoder</string>
    <string name="shouye">首页</string>
    <string name="shipin">视频</string>
    <string name="guanzhu">关注</string>
    <string name="wo">我</string>
    <string name="zixun">资讯</string>
    <string name="keji">科技</string>
    <string name="chuangye">创业</string>
    <string name="yundong">运动</string>
    <string name="transition_news_img">transition_news_img</string>
    <string name="more_vedio">更多视频</string>
    <string name="share">分享</string>
    <string name="shujujiazaizhong">数据加载中..</string>
    <string name="bofangwancheng">播放完成</string>
    <string name="haoxiangchuxianleyidianwenti">好像出现了一点问题,待会再试吧.</string>
    <string name="bizhi">壁纸</string>
    <string name="zaianyicituichu">再点一次退出</string>
    <string name="no_network">当前无可用网络</string>
    <string name="goto_net_setting">是否跳转到网络设置界面?</string>
    <string name="queding">确定</string>
    <string name="quxiao">取消</string>
</resources>
