<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <!--第一层的Viewpager-->
    <android.support.v4.view.ViewPager
        android:id="@+id/vp_vp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    </android.support.v4.view.ViewPager>

    <RadioGroup
        android:id="@+id/rg_bm_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/c_efefef"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/MMTabButton"
            android:checked="true"
            android:drawableTop="@drawable/bt_home_selector"
            android:text="@string/shouye"/>

        <RadioButton
            android:id="@+id/rb_video"
            style="@style/MMTabButton"
            android:drawableTop="@drawable/bt_vedio_selector"
            android:text="@string/shipin"/>

        <RadioButton
            android:id="@+id/rb_pic"
            style="@style/MMTabButton"
            android:drawableTop="@drawable/bt_pic_selector"
            android:text="@string/bizhi"/>

    </RadioGroup>
</LinearLayout>