<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_splash"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

            <View
                android:id="@+id/view_divider"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/bg_divider"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:gravity="center"
            android:orientation="vertical">
            <!--logo-->
            <ImageView
                android:id="@+id/center_text"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:scaleType="centerInside"
                android:src="@mipmap/supercoder_logo"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/show_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:background="@drawable/loading_shape"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/alert_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/dimen_s"
            android:paddingTop="@dimen/dimen_s"
            android:text="@string/no_network"
            android:textColor="@android:color/white"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/alert_Message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center"
            android:paddingBottom="@dimen/dimen_s"
            android:paddingTop="@dimen/dimen_s"
            android:text="@string/goto_net_setting"
            android:textSize="@dimen/text_size18"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/high_1px"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_s"
                android:layout_weight="1"
                android:background="@drawable/bt_normal_red_selector"
                android:text="@string/queding"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/bt_right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_s"
                android:layout_weight="1"
                android:background="@drawable/bt_normal_gray_selector"
                android:text="@string/quxiao"
                android:textColor="@android:color/white"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>