<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinator_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <!--顶栏-->
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:gravity="center">
                    <!--logo-->
                    <ImageView
                        android:id="@+id/center_text"
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="4dp"
                        android:scaleType="centerInside"
                        android:src="@mipmap/supercoder_logo"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">
                    <!--资讯-->
                    <LinearLayout
                        android:id="@+id/ll_one"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/zixun"
                            android:textColor="@color/c_333333"
                            android:textSize="16sp"/>
                    </LinearLayout>
                    <!--科技-->
                    <LinearLayout
                        android:id="@+id/ll_two"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/keji"
                            android:textColor="@color/c_333333"
                            android:textSize="16sp"/>

                    </LinearLayout>
                    <!--创业-->
                    <LinearLayout
                        android:id="@+id/ll_three"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/chuangye"
                            android:textColor="@color/c_333333"
                            android:textSize="16sp"/>
                    </LinearLayout>
                    <!--运动-->
                    <LinearLayout
                        android:id="@+id/ll_four"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/yundong"
                            android:textColor="@color/c_333333"
                            android:textSize="16sp"/>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/layout_title"/>

</android.support.design.widget.CoordinatorLayout>