<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <!--作用是提供了一个可以折叠的Toolbar-->
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/rg_text_color"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:transitionName="@string/transition_news_img"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />
            <!--app:layout_collapseMode="pin"  确保Toolbar在view折叠的时候仍然被固定在屏幕的顶部-->
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestscrollview"
        android:background="@color/c_fefefe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/activity_news_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@color/white">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2px"
                            android:layout_margin="10dp"
                            android:background="@color/lighter_gray"/>
                    </LinearLayout>
                    <RelativeLayout
                        android:id="@+id/rl_vv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white">
                        <com.jju.yuxin.supercoder.view.YVideoView
                            android:id="@+id/vedio_paly"
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"/>

                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white">
                        <TextView
                            android:layout_alignParentLeft="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:textSize="18sp"
                            android:text="@string/more_vedio"
                            android:textColor="@color/black"/>


                        <TextView
                            android:id="@+id/tv_fenxiang"
                            android:layout_toLeftOf="@+id/iv_shard"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/share"
                            android:textColor="@color/black"/>
                        <ImageView
                            android:id="@+id/iv_shard"
                            android:layout_margin="10dp"
                            android:layout_alignParentRight="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@mipmap/share_button"/>
                        <ImageView
                            android:id="@+id/iv_download"
                            android:layout_margin="10dp"
                            android:layout_toLeftOf="@id/tv_fenxiang"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@mipmap/download"/>
                        <TextView
                            android:id="@+id/reader_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:layout_centerVertical="true"
                            android:layout_toLeftOf="@+id/iv_download"
                            android:textColor="@color/black"/>
                    </RelativeLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2px"
                        android:background="@color/lighter_gray"/>
                    <com.jju.yuxin.supercoder.view.YListView
                        android:id="@+id/lv_more_vedio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </com.jju.yuxin.supercoder.view.YListView>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
